k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-prod
  labels:
    app.kubernetes.io/part-of: aops-demo
